--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swamppit",
   "version": "1.0.0",
   "description": "THIS IS THE TEST OF THE READ ME FILE",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
